--- a/examples/prescription/snippets/new-drug.html
+++ b/examples/prescription/snippets/new-drug.html
@@ -20,16 +20,16 @@
     </td>
     <td>
         <div class="pres-col-buttons">
-            <button type="button" class="view-mode" id="btn-row-edit" title="Edit" presid="{{presid}}">
+            <button type="button" class="view-mode" id="btn-row-edit" title="Sửa" presid="{{presid}}">
                 <span class="material-symbols-outlined">edit</span>
             </button>
-            <button type="button" class="view-mode" id="btn-row-remove" title="Remove" presid="{{presid}}">
+            <button type="button" class="view-mode" id="btn-row-remove" title="Xóa thuốc" presid="{{presid}}">
                 <span class="material-symbols-outlined">delete_forever</span>
             </button>
-            <button type="button" class="edit-mode" id="btn-row-accept" title="Accept" presid="{{presid}}" style="display: none;">
+            <button type="button" class="edit-mode" id="btn-row-accept" title="Chấp nhận" presid="{{presid}}" style="display: none;">
                 <span class="material-symbols-outlined">done</span>
             </button>
-            <button type="button" class="edit-mode" id="btn-row-cancel" title="Cancel" presid="{{presid}}" style="display: none;">
+            <button type="button" class="edit-mode" id="btn-row-cancel" title="Hủy" presid="{{presid}}" style="display: none;">
                 <span class="material-symbols-outlined">cancel</span>
             </button>
         </div>
