--- a/examples/prescription/snippets/new-drug.html
+++ b/examples/prescription/snippets/new-drug.html
@@ -26,10 +26,10 @@
             <button type="button" class="view-mode" id="btn-row-remove" title="Xóa thuốc" presid="{{presid}}">
                 <span class="material-symbols-outlined">delete_forever</span>
             </button>
-            <button type="button" class="edit-mode" id="btn-row-accept" title="Chấp nhận" presid="{{presid}}" style="display: none;">
+            <button type="button" class="edit-mode" id="btn-row-accept" title="Chấp nhận sửa đổi" presid="{{presid}}" style="display: none;">
                 <span class="material-symbols-outlined">done</span>
             </button>
-            <button type="button" class="edit-mode" id="btn-row-cancel" title="Hủy" presid="{{presid}}" style="display: none;">
+            <button type="button" class="edit-mode" id="btn-row-cancel" title="Hủy sửa đổi" presid="{{presid}}" style="display: none;">
                 <span class="material-symbols-outlined">cancel</span>
             </button>
         </div>
